fix:Pr2428-formatted date column to be aligned (#361)
* fix:Pr2428-formated date column to be aligned

* fix:Pr2428-formated date column to be aligned

--- a/src/components/utils/table/table.component.css
+++ b/src/components/utils/table/table.component.css
@@ -21,7 +21,10 @@
   flex-direction: column;
   justify-content: center;
 }
-
+.th:nth-child(3),
+.td:nth-child(3) {
+  width: 300%;
+}
 .pagination {
   display: flex;
   justify-content: center;
@@ -68,6 +71,7 @@
   border-right: 1px solid var(--blue-light);
   font-weight: bold;
   font-size: 12px;
+  width: 10px;
 }
 
 .th.info:hover {
